# car_hmi

./: .gitignore  CMakeLists.txt  README.md  car_modbus_protocol.h  export.py  inference.cpp  inference.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  modbusmanager.h  tcpclientmanager.cpp  tcpclientmanager.h  vision.cpp  vision.h  yolo.h
LaserWeedingCar/include/: protocol_def.h
LaserWeedingCar/src/: main.cpp
car_hmi-master/: .gitignore  CMakeLists.txt  inference.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  modbusmanager.cpp  vision.cpp  vision.h
models/yolov8s_rknn_model/: dataset.txt  metadata.yaml
orangepi5b-imx415/: my_imx415.c  orangepi5b-imx415.dts
src/: copy.cpp  inference.cpp  inference.h  mainwindow.cpp  mainwindow.h  mqttclientmanager.cpp  mqttclientmanager.h  protocol_def.h  test.py  vision.cpp  vision.h
ui/: mainwindow.ui
